# PipelineProj

./: CMakeLists.txt  Hello.py  Shortcut.wxs  hello_world.cpp
